// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csvFileParseRequest fails to parse 1`] = `
Array [
  Object {
    "type": "PARSE_CSV_PENDING",
  },
  Object {
    "payload": Object {
      "details": Array [
        Object {
          "message": "Oh no",
          "row": 1,
        },
        Object {
          "message": "Oh no",
          "row": 2,
        },
      ],
      "message": "An error occurred while parsing your file.",
    },
    "type": "PARSE_CSV_FAIL",
  },
]
`;

exports[`csvFileParseRequest fails to read file 1`] = `
Array [
  Object {
    "type": "PARSE_CSV_PENDING",
  },
  Object {
    "payload": Object {
      "message": "Oh no!",
    },
    "type": "PARSE_CSV_FAIL",
  },
]
`;

exports[`csvFileParseRequest parses successfully 1`] = `
Array [
  Object {
    "type": "PARSE_CSV_PENDING",
  },
  Object {
    "payload": Object {
      "data": Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
      ],
    },
    "type": "PARSE_CSV_SUCCESS",
  },
]
`;
